--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
             name="description"
             content="A Hacker News SPA client built with Elm"
         />
-        <link rel="stylesheet" href="./css/style.scss" />
         <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
         <link
             rel="icon"
@@ -14,8 +13,12 @@
             sizes="16x16"
             href='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" height="16"%3E%3Crect fill="#DD773F" stroke="white" width="10" height="10"%3E%3C/rect%3E%3Cline stroke="white" x1="10" y1="0" x2="0" y2="10"%3E%3C/line%3E%3Cline stroke="white" x1="5" y1="5" x2="0" y2="0"%3E%3C/line%3E%3C/svg%3E'
         />
+        <link rel="preconnect" href="https://hacker-news.firebaseio.com/v0">
+        <style>
+            @import './css/style.scss';
+        </style>
+        <script type="module" src="index.js"></script>
     </head>
     <body>
-        <script type="module" src="index.js"></script>
     </body>
 </html>
